<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- strings in activity_main.xml -->
    <string name="app_name">HeyMenu</string>
    <string name="company_name">Hummingbird System</string>
    <string name="pre_key_clear_image_cache">pre_key_clear_image_cache</string>
    <string name="pre_key_custom_api_addr">pre_key_custom_api_addr</string>
    <string name="pre_key_custom_api_suffix">pre_key_custom_api_suffix</string>
    <string name="pre_key_work_without_network">pre_key_work_without_network</string>
    <string name="pre_key_setting_imei">pre_key_setting_imei</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="password_required">Please enter your password.</string>
    <string name="remember_password">Remember me</string>
    <string name="login_welcome">Login</string>
    <string name="welcome">Welcome</string>
    <string name="not_login">Please log in</string>
    <string name="confirm_logout">Are you sure to log out?</string>
    <string name="wrong_login">Incorrect username and/or password.</string>
    <string name="wrong_device">Your device is not in the management list.</string>
    <string name="food_search_hint">\u0020 Search</string>
    <string name="order">Order</string>
    <string name="main_btn_lock">Unlock</string>
    <string name="main_btn_menu">Menu</string>
    <string name="main_btn_table_info">Table</string>
    <string name="main_btn_manage">Settings</string>

    <!-- strings in activity_order.xml -->
    <string name="activity_order_category">Category</string>
    <string name="activity_order_item">Item</string>
    <string name="activity_order_item_price">Price</string>
    <string name="activity_order_item_quantity">Qty</string>
    <string name="activity_order_item_note">Note</string>
    <string name="activity_order_place_order">Place Order</string>
    <string name="activity_order_total_price">Total: $</string>
    <string name="activity_order_no_order">You have not ordered yet.</string>
    <string name="activity_order_incomplete_need_assistance">Please give the order to the attendant.</string>
    <string name="activity_order_submit_title">Order Submit</string>
    <string name="activity_order_complete">Your order has been submitted.</string>

    <!-- Table Information -->
    <string name="table_status_check">Table Status</string>
    <string name="table_status_empty">Empty</string>
    <string name="table_status_full">Full</string>
    <string name="table_status_reserved">Reserved</string>

    <!-- System Maintainence -->
    <string name="system_maintainence_management">System Management</string>
    <string name="system_maintainence_update_menu">Menu Update</string>
    <string name="system_maintainence_settings">Settings</string>
    <string name="system_maintainence_update_finished">The menu is updated now.</string>
    <string name="title_activity_menu_gallery_browse">MenuGalleryBrowseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_grid">MenuGridActivity</string>
    <string name="select_table">Select Table</string>
    <string name="guest_number">Number of Guests:</string>
    <string name="confirm">Confirm</string>
    <string name="logout">logout</string>
    <string name="add">+ ADD</string>
    <string name="qty">Qty</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax(8.75%):</string>
    <string name="total">Total:</string>
    <string name="cancel">Cancel</string>
    <string name="place_order">Place Order</string>

</resources>